# mcartest

./: .gitignore  LICENSE.MD  NOTICE.MD  README.MD  README.md  README_min.md  THIRD_PARTY_LICENSES.md  mcar_stats_tests.py  min_readme.md  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
notebooks/: MCAR_Tests.ipynb
src/: df_utils.py  mcar_stats_tests.py
src/mcartest/: __init__.py  _dataframe_utils.py  logo.py  mcar_stats_tests.py
unittests/: test_mcartest.py
