[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcartest"
version = "0.0.0a3"
description = "MCAR statistical tests in Python: Little's chi-square test and pairwise t-tests, extended with Cohen's d effect sizes and MCAR/not-MCAR labeling."
readme = { file = "README_min.md", content-type = "text/markdown" }
authors = [
    { name = "Leonid Shpaner", email = "lshpaner@ucla.edu" }
]

requires-python = ">=3.8"
dependencies = [
    "jinja2>=3.0.0",
    "numpy>=1.19.0",
    "openpyxl>=3.0.0",
    "pandas>=1.3.0",
    "scipy>=1.5.0",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
"Documentation" = "https://uclamii.github.io/mcartest/"
"Source Code" = "https://github.com/uclamii/mcartest/"
"Author Website" = "https://mii.ucla.edu/"

[tool.setuptools.packages.find]
where = ["src"]